--- a/WordPressUtils/build.gradle
+++ b/WordPressUtils/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compile('commons-lang:commons-lang:2.6') {
         exclude group: 'commons-logging'
     }
-    compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:support-v13:23.1.1'
 }
 
