--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,22 @@ jobs:
           name: Build
           command: ./gradlew --stacktrace assembleDebug assembleRelease
       - android/save-gradle-cache
+  Bintray Upload:
+    executor:
+      name: android/default
+      api-version: "27"
+    steps:
+      - checkout
+      - copy-gradle-properties
+      - android/restore-gradle-cache
+      - run:
+          name: Experimental Bintray Upload
+          command: ./gradlew --stacktrace bintrayUpload
+      - android/save-gradle-cache
 
 workflows:
   WordPress-Utils-Android:
     jobs:
       - Lint
       - Build
+      - Bintray Upload
