--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,3 +61,7 @@ workflows:
       - Bintray Upload:
         requires:
           - Build
+        filters:
+          # Don't run on tags
+          tags:
+            ignore: /.*/
