Try to fix build error by renaming job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           name: Build
           command: ./gradlew --stacktrace assembleDebug assembleRelease
       - android/save-gradle-cache
-  Bintray Upload:
+  bintray-upload-from-branch:
     executor:
       name: android/default
       api-version: "27"
@@ -58,7 +58,7 @@ workflows:
     jobs:
       - Lint
       - Build
-      - Bintray Upload:
+      - bintray-upload-from-branch:
         requires:
           - Build
         filters:
