Remove tag filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           name: Build
           command: ./gradlew --stacktrace assembleDebug assembleRelease
       - android/save-gradle-cache
-  bintray-upload-from-branch:
+  Upload to Bintray:
     executor:
       name: android/default
       api-version: "27"
@@ -58,10 +58,6 @@ workflows:
     jobs:
       - Lint
       - Build
-      - bintray-upload-from-branch:
+      - Upload to Bintray:
           requires:
             - Build
-          filters:
-            # Don't run on tags
-            tags:
-              ignore: /.*/
