--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,9 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^\d+(\.\d+)*$/
+              # only: /^\d+(\.\d+)*$/
+              # while testing, use any tag
+              only: /.*/
       - Upload to Bintray:
           requires:
             - Build
