--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,8 @@ jobs:
             elif [[ "$branch" != "trunk" && "$branch" != "develop" && "$branch" != "master" ]]; then
               echo "Running on a feature branch with no open PR: skipping Bintray upload"
               exit 0
+            else
+              echo "Running on a production branch: skipping while trying to figure out a clean way to avoid republishing the same version."
             fi
 
             # Locally, calling `./gradlew bintrayUpload` is enough to generate
