Temporarily skip publishing on production branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ jobs:
               exit 0
             else
               echo "Running on a production branch: skipping while trying to figure out a clean way to avoid republishing the same version."
+              exit 0
             fi
 
             # Locally, calling `./gradlew bintrayUpload` is enough to generate
